test/testdata/e2e/http2_protocol_options/vs-custom-http2.yaml
apiVersion: envoy.kaasops.io/v1alpha1
kind: VirtualService
metadata:
  name: vs-custom-http2
  annotations:
    envoy.kaasops.io/node-id: test
spec:
  listener:
    name: https
  httpFilters:
    - name: envoy.filters.http.router
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  tlsConfig:
    autoDiscovery: true
  http2ProtocolOptions:
    max_concurrent_streams: 50
    initial_stream_window_size: 131072
    initial_connection_window_size: 2097152
  virtualHost:
    domains:
      - exc.kaasops.io
    routes:
      - match:
          prefix: "/"
        direct_response:
          status: 200
          body:
            inline_string: "{\"message\":\"custom-http2\"}\n"
