test/testdata/e2e/http2_protocol_options/vs-default-http2.yaml
apiVersion: envoy.kaasops.io/v1alpha1
kind: VirtualService
metadata:
  name: vs-default-http2
  annotations:
    envoy.kaasops.io/node-id: test
spec:
  listener:
    name: https
  httpFilters:
    - name: envoy.filters.http.router
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  tlsConfig:
    autoDiscovery: true
  virtualHost:
    domains:
      - exc.kaasops.io
    routes:
      - match:
          prefix: "/"
        direct_response:
          status: 200
          body:
            inline_string: "{\"message\":\"default-http2\"}\n"
