test/testdata/e2e/http2_protocol_options/vs-http-no-defaults.yaml
apiVersion: envoy.kaasops.io/v1alpha1
kind: VirtualService
metadata:
  name: vs-http-no-defaults
  annotations:
    envoy.kaasops.io/node-id: test
spec:
  listener:
    name: http
  httpFilters:
    - name: envoy.filters.http.router
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  virtualHost:
    domains:
      - http-test.kaasops.io
    routes:
      - match:
          prefix: "/"
        direct_response:
          status: 200
          body:
            inline_string: "{\"message\":\"http-no-defaults\"}\n"
