test/testdata/e2e/http2_protocol_options/vs-invalid-http2.yaml
apiVersion: envoy.kaasops.io/v1alpha1
kind: VirtualService
metadata:
  name: vs-invalid-http2
  annotations:
    envoy.kaasops.io/node-id: test
spec:
  listener:
    name: https
  httpFilters:
    - name: envoy.filters.http.router
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  tlsConfig:
    autoDiscovery: true
  http2ProtocolOptions:
    # Invalid: initial_stream_window_size must be >= 65535
    initial_stream_window_size: 100
  virtualHost:
    domains:
      - exc.kaasops.io
    routes:
      - match:
          prefix: "/"
        direct_response:
          status: 200
          body:
            inline_string: "{\"message\":\"invalid-http2\"}\n"
