test/testdata/e2e/http2_protocol_options/vs-opt-out-http2.yaml
apiVersion: envoy.kaasops.io/v1alpha1
kind: VirtualService
metadata:
  name: vs-opt-out-http2
  annotations:
    envoy.kaasops.io/node-id: test
spec:
  listener:
    name: https
  httpFilters:
    - name: envoy.filters.http.router
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  tlsConfig:
    autoDiscovery: true
  # Empty object disables defaults and uses Envoy's built-in values
  http2ProtocolOptions: {}
  virtualHost:
    domains:
      - exc.kaasops.io
    routes:
      - match:
          prefix: "/"
        direct_response:
          status: 200
          body:
            inline_string: "{\"message\":\"opt-out-http2\"}\n"
