test/testdata/e2e/http2_protocol_options/vs-partial-http2.yaml
apiVersion: envoy.kaasops.io/v1alpha1
kind: VirtualService
metadata:
  name: vs-partial-http2
  annotations:
    envoy.kaasops.io/node-id: test
spec:
  listener:
    name: https
  httpFilters:
    - name: envoy.filters.http.router
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  tlsConfig:
    autoDiscovery: true
  http2ProtocolOptions:
    # Only set max_concurrent_streams, other fields should not be set
    max_concurrent_streams: 200
  virtualHost:
    domains:
      - exc.kaasops.io
    routes:
      - match:
          prefix: "/"
        direct_response:
          status: 200
          body:
            inline_string: "{\"message\":\"partial-http2\"}\n"
